# mep-lps

./: .env.example  .gitignore  README.md  RELEASE.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh
backend/: DATABASE_MODELING.md  DATABASE_SCHEMA.md  README.md  pyproject.toml  seed_all_services.py
backend/api_gateway/: Dockerfile  main.py  nginx.conf
backend/databases/postgres_cart/: init.sql
backend/databases/postgres_catalog/: init.sql
backend/databases/postgres_orders/: init.sql
backend/databases/postgres_payments/: init.sql
backend/databases/postgres_recommendations/: init.sql
backend/databases/postgres_shipping/: init.sql
backend/databases/postgres_users/: init.sql
backend/databases/redis/: Dockerfile  redis.conf
backend/microservices/auth_service/: Dockerfile  add_test_user.py  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py  update_admin.sql
backend/microservices/auth_service/middleware/: auth_middleware.py
backend/microservices/auth_service/repositories/: user_repository.py
backend/microservices/auth_service/schemas/: auth_schemas.py
backend/microservices/auth_service/services/: jwt_service.py  password_service.py  user_service.py
backend/microservices/cart_service/: Dockerfile  IMPLEMENTATION.md  README.md  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py  test_cart_service.py
backend/microservices/cart_service/repositories/: __init__.py  cart_repository.py
backend/microservices/cart_service/schemas/: __init__.py  cart_schemas.py
backend/microservices/cart_service/services/: __init__.py  cart_service.py  redis_service.py
backend/microservices/catalog_service/: Dockerfile  README.md  config.py  database.py  main.py  models.py  public_settings.json  pyproject.toml  routes.py  seed_data.py  test_setup.py
backend/microservices/catalog_service/repositories/: __init__.py  book_repository.py
backend/microservices/catalog_service/schemas/: __init__.py  book_schemas.py
backend/microservices/catalog_service/services/: __init__.py  book_service.py  cache_service.py
backend/microservices/order_service/: Dockerfile  README.md  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py
backend/microservices/order_service/repositories/: __init__.py  order_repository.py
backend/microservices/order_service/schemas/: __init__.py  order_schemas.py
backend/microservices/order_service/services/: __init__.py  order_number_service.py  order_service.py
backend/microservices/payment_service/: Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py
backend/microservices/payment_service/repositories/: __init__.py  payment_repository.py
backend/microservices/payment_service/schemas/: __init__.py  pagamento_schemas.py
backend/microservices/payment_service/services/: __init__.py  payment_gateway_service.py  payment_service.py
backend/microservices/payment_service/utils/: __init__.py  validators.py
backend/microservices/recommendation_service/: Dockerfile  README.md  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py
backend/microservices/shipping_service/: Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  seed_data.py
frontend/: .dockerignore  .gitignore  (+6 more)
(+84 files in other folders)
